Fixed z-index of mobile menu

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 
 #mobile-sidebar {
   padding: 3rem;
-  z-index: 4;
+  z-index: 40;
   width: 100%;
   height: 100vh;
   background-color: var(--primary_green);
